fixes spacing and adds image

--- a/front-end/src/app/header/header.component.css
+++ b/front-end/src/app/header/header.component.css
@@ -1,9 +1,43 @@
-
-
-
-
 .flexbox {
 	display: inline;
+}
+
+#img-container {
+	height: 200px;
+	width: 100%;
+	background: #D3D3D3;
+	margin-right: 0;
+	border-radius: 10px;
+	border: 2px double white;
+
+}
+
+@media only screen and (max-width: 1200) {
+	#img-container {
+		flex-wrap: wrap;
+	}
+}
+
+@media only screen and (max-width: 775px) {
+	#img-container {
+		display: none;
+	}
+
+	#head-img-2, #head-img-3 {
+		display: none;
+	}
+
+	#head-img-5, #head-img-6 {
+		display: none;
+	}
+
+	#head-img-1, #head-img-4 {
+		display: none;
+	}
+	#alt-header {
+		display: block;
+	}
+
 }
 
 
@@ -52,7 +86,7 @@
 	animation-name: middle-image3FadeInOut;
 	animation-timing-function: ease-in-out;
 	animation-iteration-count: infinite;
-	animation-duration: 10s;
+	animation-duration: 9s;
 	animation-direction: alternate;
 }
 
@@ -79,62 +113,110 @@
 	animation-direction: alternate;
 }
 
+@keyframes far-image3FadeInOut {
+0% {
+    opacity:1;
+}
+45% {
+	opacity:1;
+}
+55% {
+	opacity:0;
+}
+100% {
+	opacity:0;
+}
+}
+
+#img-far img.top {
+	animation-name: far-image3FadeInOut;
+	animation-timing-function: ease-in-out;
+	animation-iteration-count: infinite;
+	animation-duration: 8s;
+	animation-direction: alternate;
+}
+
+#alt-header {
+	postition: absolute;
+	font-family: 'Sigmar One';
+	display: none;
+	
+	
+}
+
+.row.no-gutter {
+  margin-left: 0;
+  margin-right: 0;
+}
+.row.no-gutter [class*='col-']:not(:first-child),
+.row.no-gutter [class*='col-']:not(:last-child) {
+  padding-right: 0;
+  padding-left: 0;
+}
+
 #head-img-1 {
 	position: absolute;
 	margin-left: 8px;
 	height: 200px;
-	width: 500px;
+	width: 100%;
+	margin-top: 5px;
 	border-radius: 5px;
-	flex-grow: 1;
-	border: 3px solid black;
 }
 
 
 #head-img-4 {
 	margin-left: 8px;
 	height: 200px;
-	width: 500px;
+	width: 100%;
+	margin-top: 5px;
 	border-radius: 5px;
-	flex-grow: 1;
-	border: 3px solid black;
 }
 
 #head-img-2 {
 	position: absolute;
 	height: 200px;
-	width: 400px;
+	width: 100%;
+	margin-top: 5px;
 	border-radius: 5px;
-	border: 3px solid black;
 }
 
 #head-img-3 {
 	height: 200px;
-	width: 400px;
+	width: 100%;
+	margin-top: 5px;
 	border-radius: 5px;
-	border: 3px solid black;
 }
 
 #head-img-5 {
 	position: absolute;
 	height: 200px;
-	width: 350px;
+	width: 100%;
+	margin-top: 5px;
 	border-radius: 5px;
-	border: 3px solid black;
 }
 
 #head-img-6 {
 	height: 200px;
-	width: 350px;
+	width: 100%;
+	margin-top: 5px;
 	border-radius: 5px;
-	border: 3px solid black;
 }
 
-ul {
-	display: inline;
+#head-img-7 {
+	position: absolute;
+	height: 200px;
+	width: 100%;
+	margin-top: 5px;
+	border-radius: 5px;
+	flex-grow: 2;
 }
 
-li {
-	list-style-type: none;
+#head-img-8 {
+	height: 200px;
+	width: 100%;
+	margin-top: 5px;
+	border-radius: 5px;
+	flex-grow: 2;
 }
 
 h3 {
